Update treeview progressbar, fix high contrast theme progressbar

--- a/src/view/app/Components/PercentageBar/PercentageFill.css
+++ b/src/view/app/Components/PercentageBar/PercentageFill.css
@@ -17,6 +17,10 @@
   border-radius: 4px;
 }
 
+body.vscode-high-contrast .progressBar {
+  background-color: #dccfcf;
+}
+
 .progressBarText {
   position: absolute;
   top: 0;
